--- a/categoria/life/index.html
+++ b/categoria/life/index.html
@@ -2,8 +2,21 @@
 layout: default
 ---
 <ul id="post-list">
-    {% for post in site.category.life %}
-        {% include 리스트레이아웃.html %}
+    {% for post in site.categories.life %}
+        <li>
+	        <h2>
+	          <a href="{{ post.url }}">{{ post.title }}</a>
+	        </h2>
+	        <p>
+	          <span class="date">{{ post.date | date_to_string }}</span>
+	          <span class="description">{{ post.description }}</span>
+	        </p>
+	        <ul class="tags cf">
+	          {% for tag in post.tags %}
+	          <li><a href="/search/?tags={{ tag }}">{{ tag | downcase }}</a></li>
+	          {% endfor %}
+	        </ul>
+	      </li>
     {% endfor %}
 </ul>
 {% include pagination.html %}
