add java category

--- a/categoria/java/index.html
+++ b/categoria/java/index.html
@@ -3,9 +3,9 @@ layout: minimal
 ---
 <div class="tags">
 </div>
-  <span class="tag-title" id="life">LIFE</span>
+  <span class="tag-title" id="java">JAVA</span>
   <ul id="post-list">
-    {% for post in site.categories.life %}
+    {% for post in site.categories.java %}
         {% if post.title != null %}
             {% if group == null or group == post.group %}
             <li>
